[project]
name = "dsa-interview-prep"
version = "0.1.0"
description = "Notes on DSA and common algorithm implementation for interviews."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typing-extensions>=4.12.2",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "pytest>=8.3.4"]

[tool.setuptools]
packages = ["src"]
